Fix z-index issue

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -58,7 +58,7 @@
   border-radius: 50%;
   width: 426px;
   height: 426px;
-  z-index: -1;
+  z-index: 0;
   top: -152px;
   left: -129px;
   position: absolute;
